--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
+log
+mail
 .bazaar/lock
+.fetchmailrc
+.mairixdb
+.msmtprc
+.procmail/blacklist
+.procmail/list
+.procmail/whitelist
 .screen
 .viminfo
 .vim/.netrwhist
