Add ratpoison files

--- a/.gitignore
+++ b/.gitignore
@@ -3,14 +3,19 @@ mail
 .ansible
 .bazaar/lock
 .fetchmailrc
+.ICEauthority
 .mairixdb
 .msmtprc
 .procmail/blacklist
 .procmail/list
 .procmail/whitelist
+.ratpoison_history
 .screen
 .vault
 .viminfo
 .vim/.netrwhist
+.Xauthority
+.xsession-errors
+.xsession-errors.old
 .zhistory
 .zsh/aws.zsh
