--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ sites
 .irssi
 .lesshst
 .mairixdb
+.moosic/player_log
+.moosic/saved_state
+.moosic/server_log
 .msmtprc
 .pip
 .procmail/blacklist
