--- a/.gitignore
+++ b/.gitignore
@@ -19,9 +19,11 @@ VirtualBox VMs
 .ICEauthority
 .irb-history
 .irssi
+.java
 .keybase
 .keychain
 .lesshst
+.m2
 .mairixdb
 .moosic/player_log
 .moosic/saved_state
