Ignore remaining dot files

--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,20 @@ VirtualBox VMs
 .bazaar/lock
 .bitlbee
 .bundle
+.cache
 .cargo
+.certs
+.compiz
+.config
+.dbus
 .docker
 .fetchmailrc
 .fortunes/*.dat
+.gconf
 .gem
+.gimp-2.8
+.gnome2
+.gnupg
 .ICEauthority
 .irb-history
 .irssi
@@ -28,6 +37,7 @@ VirtualBox VMs
 .moosic/player_log
 .moosic/saved_state
 .moosic/server_log
+.mozilla
 .msmtprc
 .multirust
 .pip
@@ -48,13 +58,16 @@ VirtualBox VMs
 .spamassassin/bayes_journal
 .spamassassin/bayes_seen
 .spamassassin/bayes_toks
+.ssh
 .tox
 .travis
 .vault
 .viminfo
 .vim/.netrwhist
+.w3m
 .Xauthority
 .xsession-errors
 .xsession-errors.old
+.zcompdump
 .zhistory
 .zsh/aws.zsh
