Prefix gitignore paths with /

--- a/.gitignore
+++ b/.gitignore
@@ -1,78 +1,78 @@
 *.pyc
 *~
-doc
-lib
-log
-mail
-notes
-R
-sites
-src
-VirtualBox VMs
-.abook/addressbook
-.anacron
-.ansible
-.bazaar/lock
-.bitlbee
-.bundle
-.cache
-.cargo
-.certs
-.compiz
-.config
-.dbus
-.docker
-.fetchmailrc
-.fortunes/*.dat
-.gconf
-.gem
-.gimp-2.8
-.gnome2
-.gnupg
-.ICEauthority
-.irb-history
-.irssi
-.java
-.keybase
-.keychain
-.lesshst
-.local
-.m2
-.mairixdb
-.moosic/player_log
-.moosic/saved_state
-.moosic/server_log
-.mozilla
-.msmtprc
-.multirust
-.pip
-.procmail/blacklist
-.procmail/list
-.procmail/whitelist
-.python-eggs
-.python_history
-.ratpoison_history
-.rbenv
-.remind/monthly.rem
-.remind/weekly.rem
-.remind/yearly.rem
-.rustup
-.s3cfg
-.screen
-.slrnpull
-.spamassassin/bayes_journal
-.spamassassin/bayes_seen
-.spamassassin/bayes_toks
-.ssh
-.tox
-.travis
-.vault
-.viminfo
-.vim/.netrwhist
-.w3m
-.Xauthority
-.xsession-errors
-.xsession-errors.old
-.zcompdump
-.zhistory
-.zsh/aws.zsh
+/doc
+/lib
+/log
+/mail
+/notes
+/R
+/sites
+/src
+/VirtualBox VMs
+/.abook/addressbook
+/.anacron
+/.ansible
+/.bazaar/lock
+/.bitlbee
+/.bundle
+/.cache
+/.cargo
+/.certs
+/.compiz
+/.config
+/.dbus
+/.docker
+/.fetchmailrc
+/.fortunes/*.dat
+/.gconf
+/.gem
+/.gimp-2.8
+/.gnome2
+/.gnupg
+/.ICEauthority
+/.irb-history
+/.irssi
+/.java
+/.keybase
+/.keychain
+/.lesshst
+/.local
+/.m2
+/.mairixdb
+/.moosic/player_log
+/.moosic/saved_state
+/.moosic/server_log
+/.mozilla
+/.msmtprc
+/.multirust
+/.pip
+/.procmail/blacklist
+/.procmail/list
+/.procmail/whitelist
+/.python-eggs
+/.python_history
+/.ratpoison_history
+/.rbenv
+/.remind/monthly.rem
+/.remind/weekly.rem
+/.remind/yearly.rem
+/.rustup
+/.s3cfg
+/.screen
+/.slrnpull
+/.spamassassin/bayes_journal
+/.spamassassin/bayes_seen
+/.spamassassin/bayes_toks
+/.ssh
+/.tox
+/.travis
+/.vault
+/.viminfo
+/.vim/.netrwhist
+/.w3m
+/.Xauthority
+/.xsession-errors
+/.xsession-errors.old
+/.zcompdump
+/.zhistory
+/.zsh/aws.zsh
