--- a/.gitignore
+++ b/.gitignore
@@ -16,6 +16,7 @@
 /.bazaar/lock
 /.bitlbee
 /.bundle
+/.byebug_hist
 /.cache
 /.cargo
 /.certs/*.0
@@ -50,6 +51,7 @@
 /.procmail/blacklist
 /.procmail/list
 /.procmail/whitelist
+/.psql_history
 /.python-eggs
 /.python_history
 /.ratpoison_history
