Add docker config

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
+.docker/config.json filter=remove-docker-auth
 .fetchmailrc filter=remove-fetchmailrc-password
 .irssi/config filter=remove-irssi-password
 .pypirc filter=remove-pypirc-password
