--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".vim/bundle/vim-fugitive"]
 	path = .vim/bundle/vim-fugitive
 	url = git+ssh://git@github.com/tpope/vim-fugitive.git
+[submodule ".vim/bundle/ale"]
+	path = .vim/bundle/ale
+	url = git+ssh://git@github.com/w0rp/ale.git
