Add local pypi repository

--- a/.pypirc
+++ b/.pypirc
@@ -2,6 +2,7 @@
 index-servers=
     pypi
     testpypi
+    localpypi
 
 [pypi]
 username = cr3
@@ -9,5 +10,10 @@ password = PASSWORD
 
 [testpypi]
 repository: https://test.pypi.org/legacy/
+username = cr3
+password = PASSWORD
+
+[localpypi]
+repository = http://127.0.0.1:5000/pypi
 username = cr3
 password = PASSWORD
