--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,6 @@
 [submodule ".vim/bundle/vim-snipmate"]
 	path = .vim/bundle/vim-snipmate
 	url = git+ssh://git@github.com/garbas/vim-snipmate.git
+[submodule ".vim/bundle/tabular"]
+	path = .vim/bundle/tabular
+	url = git+ssh://git@github.com/godlygeek/tabular.git
