--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,6 @@
 [submodule ".vim/bundle/tabular"]
 	path = .vim/bundle/tabular
 	url = git+ssh://git@github.com/godlygeek/tabular.git
+[submodule ".vim/bundle/supertab"]
+	path = .vim/bundle/supertab
+	url = git+ssh://git@github.com/ervandew/supertab.git
