Integrate universal-ctags with git

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,9 @@
 [user]
 	name = Marc Tardif
 	email = marc@interunion.ca
+[alias]
+	co = checkout
+	br = branch
+	ctags = "!sh -c '[ -f .git/hooks/ctags ] || git init; .git/hooks/ctags' git-ctags"
+[init]
+	templatedir = /home/cr3/.gittemplate
