Remove a bunch of unused directories

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 *.pyc
 *.swp
 *~
+/Desktop
+/Downloads
+/Pictures
 /doc
 /lib
 /log
@@ -10,11 +13,7 @@
 /src
 /.abook/addressbook
 /.anacron
-/.ansible
-/.bazaar/lock
 /.cache
-/.cargo
-/.certs/*.0
 /.compiz
 /.config
 /.dbus
@@ -23,42 +22,26 @@
 /.gconf
 /.getmail/gmail.json
 /.getmail/oldmail*
-/.gimp-2.8
-/.gnome2
 /.gnupg
 /.ICEauthority
-/.irb-history
 /.keybase
 /.keychain
 /.lesshst
 /.local
-/.macromedia
 /.mairixdb
-/.moosic/player_log
-/.moosic/saved_state
-/.moosic/server_log
 /.mozilla
 /.msmtprc
-/.multirust
-/.p2
-/.pip
 /.procmail/blacklist
 /.procmail/list
 /.procmail/whitelist
-/.psql_history
-/.python-eggs
 /.python_history
 /.remind/monthly.rem
 /.remind/weekly.rem
 /.remind/yearly.rem
-/.rustup
 /.s3cfg
 /.ssh
 /.sudo_as_admin_successful
-/.thumbnails
-/.tox
 /.travis
-/.vault
 /.viminfo
 /.vim/.netrwhist
 /.w3m
@@ -67,4 +50,3 @@
 /.xsession-errors.old
 /.zcompdump
 /.zhistory
-/.zsh/aws.zsh
